--- a/dist.ini
+++ b/dist.ini
@@ -2,10 +2,11 @@ version=0.001
 
 name=Acme-MetaSyntactic-seinfeld
 
+[Acme::MetaSyntactic]
+
 [@Author::PERLANCAR]
-:version=0.50
+:version=0.54
 
 [Prereqs]
 parent=0
 Acme::MetaSyntactic::MultiList=0
-
